Adjustments for Mobile Devices Portrait and Landscape

--- a/css/style.css
+++ b/css/style.css
@@ -1387,7 +1387,34 @@ header .light-logo {
 
 }
 
-/* Tablet Landscape*/
+
+/* Mobile Device Portrait */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+    #our_skills .header_section {
+        height:35vh;
+
+    }
+
+    
+
+}
+
+/* Mobile Device Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) { 
+
+    #our_skills .header_section{
+        height:45vh;
+    }
+
+}
 
 
 
