--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 
-    
     body,
 html {
     margin: 0;
@@ -326,28 +325,33 @@ header .light-logo {
     transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1) 0s;
 }
 
-.jumbotron-content ul li a:hover {
-    border: none;
-}
+
+
+
 
 .jumbotron-content ul li:nth-child(1) a:hover {
     background-color: #3d589b;
+    border:2px solid #3d589b;
 }
 
 .jumbotron-content ul li:nth-child(2) a:hover {
     background-color: #34cbff;
+    border:2px solid #34cbff;
 }
 
 .jumbotron-content ul li:nth-child(3) a:hover {
     background-color: #0077B5;
+    border:2px solid #0077B5;
 }
 
 .jumbotron-content ul li:nth-child(4) a:hover {
     background-color: #d34836;
+    border:2px solid #d34836;
 }
 
 .jumbotron-content ul li:nth-child(5) a:hover {
     background-color: #000;
+    border:2px solid #000;
 }
 
 .jumbotron-button a {
@@ -1308,8 +1312,14 @@ header .light-logo {
 }
 
 
+#about .about-image img {
+    margin:0;
+}
 
-    
+#about .ed-team-image, .james-team-image {
+    position:relative;
+    left:70px;
+}
 }
 
 
@@ -1397,8 +1407,10 @@ header .light-logo {
     }
 
     .choose-us-main-header{
-        padding-top:20px;
+        padding-top:5px;
     }
+
+
 
     
 
