--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-   
+   * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
     body,
 html {
     margin: 0;
@@ -2017,6 +2021,23 @@ font-weight: 200;
     text-align: left;
     word-spacing: 2px;
 }
+
+#services .five-steps:before {
+    display: block;
+    position: relative;
+    content: '';
+    width: 50px;
+    height: 50px;
+    bottom: -25px;
+    left: 48%;
+    background-color: #fff;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: 1;
+    border-bottom: 1px solid #d3d3d3;
+    border-right: 1px solid #d3d3d3;
+}
 #services .five-steps ul li p {
     display: inline-block;
     font-size: 16px;
@@ -2026,10 +2047,10 @@ font-weight: 200;
     left: 40%;
     font-size: 25px;
     border-radius: 50%;
-    border: 2px solid #33495f;
-    padding: 10px;
-    color: #33495f;
-    margin-top: 20px;
+    border: 2px solid #fff;
+    padding: 40px;
+    color: #fff;
+    margin: 40px;
 }
 #services .services-our-process h2 {
     font-family: 'roboto', 'sans-serif';
