--- a/css/style.css
+++ b/css/style.css
@@ -1453,11 +1453,15 @@ header .light-logo {
 }
 
 #contact .menu-links ul li a {
-    color: #fff;
+    color: #232929;
 }
 
 #contact .menu-links ul li a:hover {
     color: #32c4e9;
+}
+
+#contact header.navbar-fixed-top {
+    background-color: rgba(50, 196, 233, 0.7);
 }
 
 #contact header.navbar-fixed-top .menu-links a {
@@ -1475,44 +1479,38 @@ header .light-logo {
 }
 
 #contact header {
-    background: rgba(255, 255, 255, 0);
-    border-bottom: 1px solid 0.3;
+    background: rgba(255, 255, 255, 1);
+    border-bottom: 1px solid #232929;
 }
 
 #contact header .dark-logo {
-    opacity: 0;
-    display: none;
-}
-
-#contact header .light-logo {
     opacity: 1;
     display: block;
 }
 
-#contact .jumbotron-section{
-    background: rgba(0, 0, 0, 0) url("http://i63.tinypic.com/2qbt2rp.jpg") no-repeat fixed 0 0 / cover;
-    height:80%;
-    }
-
-#contact .jumbotron-content h1{
-    font-family:'open sans', 'sans-serif';
-    font-size:60px;
-    }
-#contact .jumbotron-content p{
-    font-size: 20px;
+#contact header .light-logo {
+    opacity: 0;
+    display: none;
 }
+
+
+
+
 #contact .contact-header {
     background-color:#fff;
+    margin-top:100px;
 }
 
 #contact .contact-header h2 {
     color: #232929;
+    margin-top:120px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
     margin-top: 50px;
     font-weight:900;
     font-size: 45px;
 }
+
 
 #contact .contact-header .contact-paragraph {
     font-family: 'open sans', 'sans-serif';
@@ -1828,10 +1826,7 @@ font-weight: 200;
     height:80%;
 }
 
-#quote .jumbotron-content h1{
-    font-family: 'open sans', 'sans-serif';
-    font-size:60px;
-}
+
 
 #quote .quote-heading {
     color: #232929;
@@ -1866,61 +1861,54 @@ font-weight: 200;
     z-index: 1;
     border-bottom: 1px solid #d3d3d3;
     border-right: 1px solid #d3d3d3;
-    ;
+    
 }
-#quote .quote-form p {
-    font-family: 'open sans', 'sans-serif';
-    font-size: 18px;
-    color: #232929;
-    margin-bottom: 30px;
 
+#quote form{
+    padding-left:60px;
 }
 
 #quote .form-group {
     width: 90%;
+    margin:0;
 
 }
 
 #quote .form-control{
-    background-color: #eee;
+    background-color: #f7f7f7;
+    border:2px solid #232929;
 }
 #quote .btn.btn-primary.quote-btn {
-    color: #222;
-    background-color: #f5f5f5;
-    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f5f5f5), to(#dddddd));
-    background-image: -webkit-linear-gradient(top, #f5f5f5, #dddddd);
-    background-image: -moz-linear-gradient(top, #f5f5f5, #dddddd);
-    background-image: -ms-linear-gradient(top, #f5f5f5, #dddddd);
-    background-image: -o-linear-gradient(top, #f5f5f5, #dddddd);
-    border: 1px solid #cccccc;
-    text-shadow: #fff 1px 1px 0;
+    
+    background-color: #f7f7f7;
+    border:2px solid #232929;
+    color:#232929;
+    padding:15px 35px;
+    margin-top:20px;
+    
 }
 
-#quote .quote-icons .quote-icon {
-    margin-left: 20px;
+#quote .btn.btn-primary.quote-btn:hover {
+    
+    background-color: rgba(50, 196, 233, 0.4)
+    
 }
-#quote .quote-icons p {
-    text-align: center;
-    font-family: 'open sans', 'sans-serif';
-    font-size: 14px;
-    margin-bottom: 50px;
-    font-weight: 600;
+
+#quote ::-webkit-input-placeholder { /* WebKit browsers */
+    color:    #666;
+    text-align:center;
 }
-#quote .quote-contact {
-    padding: 10px 20px;
-    border-radius: 5px;
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:    #666;
 }
-#quote .quote-contact p {
-    font-family: 'open sans', 'sans-serif';
-    font-size: 18px;
-    display: inline-block;
-    margin-top: 20px;
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:    #666;
 }
-#quote .quote-contact .quote-phone-icon {
-    margin-right: 10px;
-    font-size: 36px;
-    color: #32c4e9;
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:    #666;
 }
+
+
 
 /* Inside Pages - Portfolio Page */
 #portfolio .jumbotron-section {
